feat: RichTextEditor added to SelectedNote component

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "@mantine/tiptap": "^7.12.1",
+    "@tiptap/extension-highlight": "^2.6.4",
     "@tiptap/extension-link": "^2.6.4",
+    "@tiptap/extension-text-align": "^2.6.4",
+    "@tiptap/extension-underline": "^2.6.4",
     "@tiptap/pm": "^2.6.4",
     "@tiptap/react": "^2.6.4",
     "@tiptap/starter-kit": "^2.6.4",
