--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "@mantine/tiptap": "^7.12.1",
+    "@tabler/icons-react": "^3.12.0",
     "@tiptap/extension-highlight": "^2.6.4",
     "@tiptap/extension-link": "^2.6.4",
     "@tiptap/extension-text-align": "^2.6.4",
