--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.12.1",
+    "@mantine/form": "^7.13.2",
     "@mantine/hooks": "^7.12.1",
     "@mantine/modals": "^7.13.2",
     "@mantine/spotlight": "^7.13.2",
