--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@tiptap/starter-kit": "^2.6.4",
     "dexie": "^4.0.8",
     "dexie-react-hooks": "^1.1.7",
+    "easymde": "^2.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.12",
