--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dexie": "^4.0.8",
     "dexie-react-hooks": "^1.1.7",
     "easymde": "^2.18.0",
+    "marked-react": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
