--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host"
   },
   "dependencies": {
     "@mantine/core": "^7.12.1",
@@ -27,6 +27,7 @@
     "dexie": "^4.0.8",
     "dexie-react-hooks": "^1.1.7",
     "easymde": "^2.18.0",
+    "js-sha256": "^0.11.0",
     "marked-react": "^2.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
